--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,31 @@
 {
-    "name"       : "hoa/zformat",
-    "description": "The Hoa\\Zformat library.",
-    "type"       : "library",
-    "keywords"   : ["library", "zformat", "parameter"],
-    "homepage"   : "https://hoa-project.net/",
-    "license"    : "BSD-3-Clause",
-    "authors"    : [
-        {
-            "name" : "Ivan Enderlin",
-            "email": "ivan.enderlin@hoa-project.net"
-        },
-        {
-            "name"    : "Hoa community",
-            "homepage": "https://hoa-project.net/"
-        }
-    ],
-    "support": {
-        "email" : "support@hoa-project.net",
-        "irc"   : "irc://chat.freenode.net/hoaproject",
-        "forum" : "https://users.hoa-project.net/",
-        "docs"  : "https://central.hoa-project.net/Documentation/Library/Zformat",
-        "source": "https://central.hoa-project.net/Resource/Library/Zformat"
-    },
-    "require": {
-        "hoa/consistency": "~1.0",
-        "hoa/exception"  : "~1.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Hoa\\Zformat\\": "."
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.x-dev"
-        }
-    }
+	"name": "hoa-math-community/zformat",
+	"description": "The Hoa\\Zformat library.",
+	"type": "library",
+	"keywords": [
+		"library",
+		"zformat",
+		"parameter"
+	],
+	"license": "BSD-3-Clause",
+	"authors": [
+		{
+			"name": "Ivan Enderlin",
+			"email": "ivan.enderlin@hoa-project.net"
+		},
+		{
+			"name": "Hoa community",
+			"homepage": "https://hoa-project.net/"
+		}
+	],
+	"require": {
+		"php": "~8.0",
+		"hoa-math-community/consistency": "~3.0",
+		"hoa-math-community/exception": "~3.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"Hoa\\Zformat\\": "."
+		}
+	}
 }
